--- a/manifests/003-nginx-ingress.yaml
+++ b/manifests/003-nginx-ingress.yaml
@@ -1,37 +1,23 @@
-apiVersion: networking.k8s.io/v1beta1
+apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: ingress-nginx
   annotations: 
     kubernetes.io/ingress.class: nginx
-    nginx.ingress.kubernetes.io/rewrite-target: /
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/add-base-url : "true"
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+    
 spec:
   rules:
     - host: wordpress.pilotgapps.com
       http:
         paths:
-          - backend:
-              serviceName: wordpress
-              servicePort: 80
-          - path: /phpmyadmin
+          - path: /phpmyadmin/?(.*)
             backend:
               serviceName: phpmyadmin
               servicePort: 80
-  # This section is only required if TLS is to be enabled for the Ingress
-  # tls:
-  #     - hosts:
-  #         - www.example.com
-  #       secretName: example-tls
-
-  # If TLS is enabled for the Ingress, a Secret containing the certificate and key must also be provided:
-
-  # apiVersion: v1
-  # kind: Secret
-  # metadata:
-  #   name: example-tls
-  #   namespace: foo
-  # data:
-  #   tls.crt: <base64 encoded cert>
-  #   tls.key: <base64 encoded key>
-  # type: kubernetes.io/tls          
+          - path: /?(.*)
+            backend:
+              serviceName: wordpress
+              servicePort: 80
