--- a/manifests/003-nginx-ingress.yaml
+++ b/manifests/003-nginx-ingress.yaml
@@ -6,14 +6,13 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
     nginx.ingress.kubernetes.io/add-base-url : "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
-    
+    nginx.ingress.kubernetes.io/rewrite-target: "/$1"   
 spec:
   rules:
     - host: wordpress.pilotgapps.com
       http:
         paths:
-          - path: /phpmyadmin/?(.*)
+          - path: /phpmyadmin(/.*)$
             backend:
               serviceName: phpmyadmin
               servicePort: 80
